[metadata]
name = CommDspy
version = 0.1.2
author = Tomer Geva
author_email = tomerg777@gmail.com
description = This package holds implementations for some Communication DSP methodology I found useful and informative
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/TomerGeva/CommDspy
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)
    Operating System :: OS Independent

[options]
package_dir=
    =CommDspy
packages = find:
python_requires = >=3.6
include_package_data = True

[options.packages.find]
where = CommDspy